--- a/loja/public/index.html
+++ b/loja/public/index.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     />
-    <title>React App</title>
+    <title>DiffStyle</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
